SigmaCodebackup3rdSep/objects/Inventory_Location__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Quantity__c</fullName>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipName>Inventory_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Quantity_Received__c</fullName>
        <label>Last Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Received_Date__c</fullName>
        <label>Last Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationName__c</fullName>
        <description>It will hold the Location Name From Account Name of type &quot;Location&quot;</description>
        <label>LocationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <formula>TEXT(Location__r.Locations_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Locations (Location)</relationshipLabel>
        <relationshipName>Inventory_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Inventory_Locations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Inventory_Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Inventory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Inventory Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Inventory Location Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidationToCheckLocation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(Location__r.RecordType.Name = &apos;Retail&apos; ||
Location__r.RecordType.Name = &apos;Location&apos; ||
Location__r.RecordType.Name = &apos;Receiving Location&apos; ||
Location__r.RecordType.Name = &apos;Warehouse&apos; 
,false,true)</errorConditionFormula>
        <errorMessage>Account type should be warehouse or retail or Location</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_for_location</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Location__c )</errorConditionFormula>
        <errorMessage>Location should not be empty</errorMessage>
    </validationRules>
</CustomObject>